# lifeos

./: .gitignore  README.md  id_ed25519_personal  id_ed25519_personal.pub  quan_legion_doan  quan_legion_doan.pub
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  router.py  test_db.py
backend/app/: main.py
backend/app/api/middleware/: logging.py
backend/app/core/: config.py  logging.py
backend/app/database/: connection.py
