[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.39.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
